feat: fill tables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,6 @@ services:
       - OLIST_DB=olist
     volumes:
       - ./db:/docker-entrypoint-initdb.d/
+      - ./data:/data
     ports:
       - "5432:5432"
